--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -77,7 +77,7 @@ body {
 
 .btn.sign-out-btn,
 .btn.logout-btn {
-  background-color: #EF4444;
+  background-color: #d20d0d9e;
   border: none;
 }
 
